# Fast-API-Clean-Architecture-2025

./: .env.example  .gitignore  ARCHITECTURE.MD  FASTCMD.MD  Insomnia_fastapi.yaml  Penjelasan Lengkap.docx  README.MD  alembic.ini  penjelasan.docx  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/cli/: README.MD  app.py  main.py
app/cli/commands/: db.py  make.py  serve.py
app/core/: config.py  jwt.py
app/core/config/: app.py
app/core/mailer/: mail.py  message.py
app/core/middleware/: http.py  jwt.py
app/database/: env.py.example  session.py
app/database/factories/: first_factory.py
app/database/migrations/: env.py
app/database/migrations/versions/: a845cde28faf_add_permission_tables.py  e99795f2a776_initial_migration.py
app/database/seeders/: db_seeder.py  first_seeder.py
app/dependencies/: auth.py  logger.py
app/models/: article.py  banner_image.py  migration.py  user.py
app/modules/permission/database/: seeder.py
app/modules/permission/middleware/: permission_middleware.py
app/modules/permission/models/: permission.py  role.py  (+6 more)
app/repositories/: article_repository.py  banner_repository.py  user_repository.py
app/routes/: app.py  health.py  web.py
app/schemas/: article.py  auth.py  banner_image.py  email.py  user.py
app/services/: article_service.py  auth_service.py  banner_service.py  file_service.py  user_service.py
app/views/emails/: reset_password.html  welcome.html
app/views/welcome/: index.html
tests/: conftest.py  test_article_integration.py  test_auth.py  test_login.py  test_login_performance.py
(+34 files in other folders)
